# siglume-app-sdk

./: ANNOUNCEMENT_DRAFT.md  API_IDEAS.md  BOUNTY_BOARD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY_LAUNCH.md  CONTRIBUTING.md  GETTING_STARTED.md  PAYMENT_MIGRATION.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.10.1.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.7.1.md  RELEASE_NOTES_v0.7.4.md  RELEASE_NOTES_v0.7.5.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.9.0.md  RELEASING.md  ROADMAP.md  SECURITY.md  public-sync-ignore.txt  pyproject.toml  siglume-api-types-aiworks.ts  siglume-api-types.ts  siglume-app-types-aiworks.ts  siglume-app-types.ts  siglume_api_sdk.py  siglume_api_sdk_aiworks.py  siglume_api_sdk_client.ts  siglume_app_sdk.py  siglume_app_sdk_aiworks.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
announcements/: GITHUB_ISSUE_CONTENT.md  POST_HACKERNEWS.md  POST_REDDIT.md  POST_X_TWITTER.md  POST_ZENN.md  README.md
docs/: account-operations.md  agent-behavior.md  buyer-sdk.md  coding-agent-guide.md  connected-accounts.md  demo-capture-guide.md  dry-run-and-approval.md  execution-receipts.md  input-form-spec.md  installed-tools-operations.md  jurisdiction-and-compliance.md  market-needs-operations.md  market-proposals-operations.md  network-operations.md  partner-ads-operations.md  permission-scopes.md  publish-flow.md  refunds-disputes.md  sdk-core-concepts.md  template-generator.md  web3-settlement.md  webhooks.md  works-operations.md
examples/: account_digests_alerts_wrapper.py  account_plan_wrapper.py  ads_campaign_wrapper.py  agent_behavior_adapter.py  calendar_sync.py  crm_sync.py  email_sender.py  hello_echo.py  hello_price_compare.py  installed_tools_wrapper.py  market_needs_wrapper.py  market_proposals_wrapper.py  metamask_connector.py  metering_record.py  network_discovery_wrapper.py  news_digest.py  partner_dashboard_wrapper.py  payment_quote.py  polygon_mandate_adapter.py  register_via_client.py  translation_hub.py  visual_publisher.py  wallet_balance.py  webhook_handler_flask.py  works_wrapper.py  x_publisher.py
examples-ts/: account_digests_alerts_wrapper.ts  account_plan_wrapper.ts  ads_campaign_wrapper.ts  agent_behavior_adapter.ts  crm_sync.ts  embedded_wallet_payment.ts  installed_tools_wrapper.ts  market_needs_wrapper.ts  market_proposals_wrapper.ts  metering_record.ts  network_discovery_wrapper.ts  news_digest.ts  partner_dashboard_wrapper.ts  wallet_balance.ts  webhook_handler_express.ts  works_wrapper.ts
openapi/: developer-surface.yaml
schemas/: app-manifest.schema.json  input-form-spec.schema.json  tool-manual-grader-rules.json  tool-manual.schema.json
scripts/: bootstrap-community-launch.ps1  check_public_sdk_sync.py  contract_sync.py  make-demo-gif.ps1
siglume-api-sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
siglume_api_sdk/: __init__.py  _version.py  buyer.py  client.py  diff.py  exporters.py  operations.py  tool_manual_assist.py  tool_manual_grader.py  webhooks.py
(+102 files in other folders)
